@@ -1,28 +1,0 @@
-$schema: http://json-schema.org/draft-04/schema#
-description: A Problem Details object (RFC 7807)
-type: object
-properties:
-  type:
-    type: string
-    format: uri
-    description: An URI reference that identifies the problem type. When dereferenced, it SHOULD provide human-readable documentation for the problem type (e.g. using HTML).
-    default: about:blank
-  title:
-    type: string
-    description: A short, summary of the problem type. Written in english and readable for engineers (usually not suited for non technical stakeholders and not localized)
-    example: Service Unavailable
-  status:
-    type: integer
-    format: int32
-    description: The HTTP status code generated by the origin server for this occurrence of the problem.
-    minimum: 400
-    maximum: 600
-    exclusiveMaximum: true
-    example: 503
-  detail:
-    type: string
-    description: A human-readable explanation specific to this occurrence of the problem
-  instance:
-    type: string
-    format: uri
-    description: A URI reference that identifies the specific occurrence of the problem. It may or may not yield further information if dereferenced.
