@@ -1,9 +1,0 @@
-$schema: http://json-schema.org/draft-04/schema#
-description: A base type representing a link to the resource's own location within its representation
-type: object
-properties:
-  self:
-    description: Any absolute URI that is using http or https protocol
-    type: string
-    format: uri
-    readOnly: true
