@@ -1,0 +1,13 @@
+swagger: "2.0"
+info:
+  title: data types related to a person
+  version: v1beta
+paths: {}
+definitions:
+  Gender:
+    description: "Gender of a person, following the ISO 5218 standard: 0 = Unknown, 1 = male, 2 = female"
+    type: integer
+    enum:
+    - 0
+    - 1
+    - 2
